2004-02-25  Yusei Tahara  <tahara@timedia.co.jp>

	* test/shell.scm, test/testuser.conf: added kahua-shell test.
	* test/Makefile: added 'shell' make target.

2004-02-23  Koichi Sasada <sasada@namikilab.taut.ac.jp>

	* src/kahua-spvr.in : bug fixed about ping.
	* src/kahua-server.in (update-server): 
	renamed 'reload-server to update-server. supported updating specified
	file.
	* src/kahua-admin.in : supported 'update' command.
	supported redo command as ":".
	* test/admin.in : add 'update' test.

2004-02-23  Koichi Sasada <sasada@namikilab.tuat.ac.jp>

	* src/kahua-spvr.in (unexpected-end): 
	added dummy procedure to hook unexpected end of a worker.
	
2004-02-23  Yusei Tahara  <tahara@timedia.co.jp>

	* emacs/kahua.el.in, emacs/kahua-shell.el:
	added kahua-user-mode variable for connecting user-mode spvr.
	* src/kahua-shell.in (login-processor): when run with -user option,
	omit username prompt.
	* src/kahua/developer.scm
	(developer-roles): added developer role.
	(kahua-add-developer): added roles argument.
	* src/kahua-admin.in, src/user.conf.sample: added developer role.
	* test/developer.scm: changed kahua-add-developer argument.

2004-02-22  Shiro Kawai  <shiro@acm.org>

	* src/kahua-server.in (handle-request): opens the default database
	($working-directory/db) if primary-database-name isn't specified.
	Since several application servers need to share the database if they
	pass control around, now it is strongly recommended for app servers
	to use the default database instead of specifying its own database
	by primary-database-name; in future, there will be different
	mechanism to allow app servers to use multiple databases.

	* src/examples/login/login.kahua : added. An example that handles
	user login.
	* src/examples/wiki-iki/wiki-iki.kahua : added link to login.
	* src/examples/app-servers.sample : added login.kahua.
	* src/examples/Makefile.in : added login.kahua.

	* src/examples/lambdabooks/lambdabooks.kahua : removed