@@ -1,0 +1,12 @@
+;;
+;; test customize configuration file
+;;
+;; $Id: testcustom.conf,v 1.1 2004/02/25 11:16:40 tahara Exp $
+
+(make <kahua-custom>
+  :working-directory    "_work/user/gandalf"
+  )
+
+;; Local variables:
+;; mode: scheme
+;; end:
